<?xml version="1.0"?>
<package>
  <name>tiny_pcl</name>
  <version>0.0.0</version>
  <description>The tiny_pcl package, easy and fast pointcloud compression</description>

  <maintainer email="dillenberger@uni-koblenz.de">Denis Dillenberger</maintainer>


  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/tiny_pcl</url> -->


  <author email="dillenberger@uni-koblenz.de">Denis Dillenberger</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>libz</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>libz</run_depend>

  <export>
  </export>
</package>
